welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:12: error: not found: value T
      setCouleurBrosse(T(i-1))
                       ^Array1:38: error: not found: value T
    setCouleurBrosse(T(i-1))
                     ^